feat: add modification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.h2.console.enabled=true
 spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:data.sql
 
-email.regex=^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.cl$
+email.regex=^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.org$
 password.regex=^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\\S+$).{8,}$
 
 
